# IMPR-Group-Work-1st-Sem

DTGList/: CMakeLists.txt  README.md
DTGList/LMR Group work commits/: DTG Workshop 2.c  DTG Workshop 2.h
LT2GRPOPG11S125/: CMakeLists.txt  main.c
LT2GRPOPGKNSLIDES/: CMakeLists.txt  main.c
Lecture2GruppeOPG/: CMakeLists.txt
MergeSortDTG/: CMakeLists.txt  main.c
handin-1-LucasMark/: README.md
handin-1-LucasMark/src/: handin1.c
handin-4-LucasMark/: README.md
handin-4-LucasMark/src/: handin4.c
lecture-1-LucasMark/: CMakeLists.txt  README.md
lecture-1-LucasMark/src/: CMakeLists.txt  exercise1.c  exercise2.c
lecture-11-LucasMark/: README.md
lecture-11-LucasMark/src/: CMakeLists.txt  exercise-11.1.c  exercise-11.3.c  exercise-11.5.c
lecture-11-live-LucasMark/: CMakeLists.txt  README.md
lecture-11-live-LucasMark/src/: CMakeLists.txt  calculator.c  (+5 more)
lecture-13-LucasMark/: CMakeLists.txt  README.md
lecture-13-live-LucasMark/: README.md
lecture-2-live-LucasMark/: CMakeLists.txt  README.md
lecture-3-live-LucasMark/: CMakeLists.txt  README.md
lecture-4-LucasMark/: README.md
lecture-4-live-LucasMark/: CMakeLists.txt  README.md
lecture-5-LucasMark/: README.md
lecture-5-live-LucasMark/: CMakeLists.txt  README.md
lecture-6-LucasMark/: README.md
lecture-6-live-LucasMark/: CMakeLists.txt  LICENSE  README.md
lecture-7-LucasMark/: README.md
lecture-8-LucasMark/: CMakeLists.txt  README.md
lecture-8-LucasMark/src/: CMakeLists.txt  menu.c  point_distance.c  point_distance.h  time_calc.h
lecture-8-live-LucasMark/: CMakeLists.txt  README.md
(+72 files in other folders)
